bug-fix for safari flex problem.
The research images are stretched vertially
with the flex wrap.  Maybe want to use block element anyway when
changing to an article style for each project page

--- a/themes/roxo-hugo/assets/scss/components/_project.scss
+++ b/themes/roxo-hugo/assets/scss/components/_project.scss
@@ -195,6 +195,7 @@
     &-image{
       display: flex;
       flex-wrap: wrap;
+      flex-direction: column;
       margin-bottom: 30px;
       img{
         justify-content: center;
